--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
               >
             </div>
             <div class="personnal-detail">
-              <a href="mailto:huuthai.nt@gmail.com" target="_blank"
-                ><i class="fa-solid fa-envelope"></i>huuthai.nt@gmail.com</a
+              <a href="mailto:thainhfx17773@funix.edu.vn" target="_blank"
+                ><i class="fa-solid fa-envelope"></i>thainhFX17773@funix.edu.vn</a
               >
             </div>
             <div class="personnal-detail">
