--- a/japanese.html
+++ b/japanese.html
@@ -39,8 +39,8 @@
               >
             </div>
             <div class="personnal-detail">
-              <a href="mailto:huuthai.nt@gmail.com" target="_blank"
-                ><i class="fa-solid fa-envelope"></i>huuthai.nt@gmail.com</a
+              <a href="mailto:thainhfx17773@funix.edu.vn" target="_blank"
+                ><i class="fa-solid fa-envelope"></i>thainhFX17773@funix.edu.vn</a
               >
             </div>
             <div class="personnal-detail">
@@ -142,19 +142,19 @@
             <h3 class="japanese-type">学&nbsp歴</h3>
             <p></p>
           </div>
-          <p>２０２１年４月ー現在</p>
-          <h3>日本国際工科専門学校</h3>
-          <ol>
-            <li>ITパスポート。</li>
-            <li>Java。</li>
-            <li>プログラミング（　VBA　）。</li>
-          </ol>
           <p>２０２２年６月ー現在</p>
           <h3>FUNIX</h3>
           <ol>
             <li>最初のウェブサイトを構築する。</li>
             <li>最初のプログラムの作成する （　Javascriptを使用　）。</li>
             <li>フロントエンドウェブサイトをプログラミングする（　Reactを使用　）。</li>
+          </ol>
+          <p>２０２１年４月ー現在</p>
+          <h3>日本国際工科専門学校</h3>
+          <ol>
+            <li>ITパスポート。</li>
+            <li>Java。</li>
+            <li>プログラミング（　VBA　）。</li>
           </ol>
         </div>
         <!-- projects  -->
