--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <span></span>
           </div>
           <div class="skill6">
-            <p>japanese</p>
+            <p>Japanese</p>
             <span></span>
             <span></span>
             <span></span>
