--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
     </div>
     <div class="main-container">
       <div class="col1">
+
         <!-- avatar and name -->
         <div class="avatar">
           <img src="./image/avatar.jpeg" alt="Nguyen Huu Thai" />
           <h1>Nguyen Huu Thai</h1>
           <p>Front-end Developer</p>
         </div>
+
         <!-- personnal-info -->
         <div class="small-container personnal-info">
           <div class="title">
@@ -39,8 +41,8 @@
               >
             </div>
             <div class="personnal-detail">
-              <a href="mailto:thainhfx17773@funix.edu.vn" target="_blank"
-                ><i class="fa-solid fa-envelope"></i>thainhFX17773@funix.edu.vn</a
+              <a href="mailto:huuthai.nt@gmail.com" target="_blank"
+                ><i class="fa-solid fa-envelope"></i>huuthai.nt@gmail.com</a
               >
             </div>
             <div class="personnal-detail">
@@ -61,6 +63,7 @@
             </div>
           </div>
         </div>
+
         <!-- career goals  -->
         <div class="small-container career-goals">
           <div class="title">
@@ -75,7 +78,7 @@
             </li>
             <li>Know how to apply the knowledge learned in work.</li>
             <li>Become a junior developer.</li>
-            <li>Get japanese certificates ( N2 )</li>
+            <li>Get japanese certificates ( N2 ).</li>
           </ul>
           <h3>Long-term Goal( 3 years - 5 years ):</h3>
           <ul>
@@ -83,6 +86,8 @@
             <li>Get japanese certificates ( N1 ).</li>
           </ul>
         </div>
+
+        <!-- skill -->
         <div class="small-container skills">
           <div class="title">
             <h3>SKILLS</h3>
@@ -136,15 +141,47 @@
             <span></span>
             <span></span>
           </div>
+          <div class="skill7">
+            <p>Communication</p>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+          <div class="skill8">
+            <p>Teamwork</p>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+          <div class="skill9">
+            <p>Task and time management</p>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
         </div>
       </div>
       <div class="col2">
+
         <!-- education  -->
         <div class="small-container education">
           <div class="title">
             <h3>EDUCATION</h3>
             <p></p>
           </div>
+          <p>Apr 2021 - Mar 2023</p>
+          <h3>Japan International College of Technology</h3>
+          <ol>
+            <li>IT Passport.</li>
+            <li>Programing with Java.</li>
+            <li>Programing with VBA ( Visual Basic For Applications ).</li>
+          </ol>
           <p>Jun 2022 - Present</p>
           <h3>FUNIX</h3>
           <ol>
@@ -152,14 +189,8 @@
             <li>Creating your first program (with Javascript).</li>
             <li>Front-End Web Programming with React.</li>
           </ol>
-          <p>Apr 2021 - Present</p>
-          <h3>Japan International College of Technology</h3>
-          <ol>
-            <li>IT Passport.</li>
-            <li>Programing with Java.</li>
-            <li>Programing with VBA ( Visual Basic For Applications ).</li>
-          </ol>
         </div>
+  
         <!-- projects  -->
         <div class="small-container projects">
           <div class="title">
@@ -197,8 +228,28 @@
             <li>Github: <a href="https://github.com/thainh199x/movietrailer/" target="_blank">https://github.com/thainh199x/movietrailer/</a></li>
           </ul>
         </div>
+
+        <!-- work experience -->
+        <div class="small-container experience">
+          <div class="title">
+            <h3>WORK&nbspEXPERIENCE</h3>
+            <p></p>
+          </div>
+          <p>Sep 2012 - Nov 2018</p>
+          <h3>Vinpearl Nha Trang</h3>
+          <ul>
+            <li>Receptionist: Welcome guests and do check-in, check-out procedures. Handle problems arising during the guest's stay.</li>
+            <li>Room-controller: Room assignment according to guest's booking request. Manage hotel room status and coordinate work with related departments.</li>
+          </ul>
+          <p>Apr 2020 - Mar 2023</p>
+          <h3>Amazon Ichikawa Shiohama</h3>
+          <ul>
+            <li>Picker: Find and get the ordered product, then pass it on to the packaging department.</li>
+          </ul>
+        </div>
+
         <!-- certificates  -->
-        <div class="small-container certificates">
+        <!-- <div class="small-container certificates">
           <div class="title">
             <h3>CERTIFICATES</h3>
             <p></p>
@@ -207,7 +258,7 @@
           <img src="./image/web.png" alt="certificate-web">
           <h3>Certificate of completion of programming techniques with javascript subject.</h3>
           <img src="./image/javascript.png" alt="certificate-javascript">
-      </div>
+      </div> -->
     </div>
   </body>
 </html>
