--- a/japanese.html
+++ b/japanese.html
@@ -14,12 +14,14 @@
     </div>
     <div class="main-container">
       <div class="col1">
+
         <!-- avatar and name -->
         <div class="avatar">
           <img src="./image/avatar.jpeg" alt="Nguyen Huu Thai" />
           <h1>グェン　フータイ</h1>
           <p>フロントエンドの開発者</p>
         </div>
+
         <!-- personnal-info -->
         <div class="small-container personnal-info">
           <div class="title">
@@ -28,19 +30,19 @@
           </div>
           <div>
             <div class="personnal-detail">
-              <p><i class="fa-solid fa-calendar-days"></i>1991年9月21日</p>
+              <p><i class="fa-solid fa-calendar-days"></i>１９９１年９月２１日</p>
             </div>
             <div class="personnal-detail">
               <p><i class="fa-solid fa-user-tie"></i>男</p>
             </div>
             <div class="personnal-detail">
               <a href="tel:+819026481991"
-                ><i class="fa fa-phone"></i>+81 90 2648 1991</a
+                ><i class="fa fa-phone"></i>+８１９０２６４８１９９１</a
               >
             </div>
             <div class="personnal-detail">
-              <a href="mailto:thainhfx17773@funix.edu.vn" target="_blank"
-                ><i class="fa-solid fa-envelope"></i>thainhFX17773@funix.edu.vn</a
+              <a href="mailto:huuthai.nt@gmail.com" target="_blank"
+                ><i class="fa-solid fa-envelope"></i>huuthai.nt@gmail.com</a
               >
             </div>
             <div class="personnal-detail">
@@ -60,25 +62,27 @@
             </div>
           </div>
         </div>
+
         <!-- career goals  -->
         <div class="small-container career-goals">
           <div class="title">
             <h3 class="japanese-type">キ&nbspャ&nbspリ&nbspア&nbsp目&nbsp標</h3>
             <p></p>
           </div>
-          <h3>短期目標（6ヶ月～1年）：</h3>
+          <h3>短期目標（６ヶ月～１年）：</h3>
           <ul>
             <li>環境に慣れ、できるだけ早く作業するように頑張る。</li>
             <li>学んだ知識を仕事に応用する方法を知っている。</li>
             <li>ジュニア開発者になる。</li>
             <li>JLPT N2を合格する。</li>
           </ul>
-          <h3>長期目標（3年～5年）：</h3>
+          <h3>長期目標（３年～５年）：</h3>
           <ul>
             <li>フルスタック開発者になる。</li>
             <li>JLPT N1を合格する。</li>
           </ul>
         </div>
+
         <!-- skills  -->
         <div class="small-container skills">
           <div class="title">
@@ -133,28 +137,53 @@
             <span></span>
             <span></span>
           </div>
+          <div class="skill7">
+            <p>コミュニケーション</p>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+          <div class="skill8">
+            <p>チームワーク</p>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+          <div class="skill9">
+            <p>タスクと時間の管理</p>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
         </div>
       </div>
       <div class="col2">
+
         <!-- education  -->
         <div class="small-container education">
           <div class="title">
             <h3 class="japanese-type">学&nbsp歴</h3>
             <p></p>
           </div>
+          <p>２０２１年４月ー２０２３年３月</p>
+          <h3>日本国際工科専門学校</h3>
+          <ol>
+            <li>ITパスポート。</li>
+            <li>Java。</li>
+            <li>プログラミング（　VBA　）。</li>
+          </ol>
           <p>２０２２年６月ー現在</p>
           <h3>FUNIX</h3>
           <ol>
             <li>最初のウェブサイトを構築する。</li>
             <li>最初のプログラムの作成する （　Javascriptを使用　）。</li>
             <li>フロントエンドウェブサイトをプログラミングする（　Reactを使用　）。</li>
-          </ol>
-          <p>２０２１年４月ー現在</p>
-          <h3>日本国際工科専門学校</h3>
-          <ol>
-            <li>ITパスポート。</li>
-            <li>Java。</li>
-            <li>プログラミング（　VBA　）。</li>
           </ol>
         </div>
         <!-- projects  -->
@@ -187,8 +216,28 @@
             <li>Github: <a href="https://github.com/thainh199x/movietrailer/" target="_blank">https://github.com/thainh199x/movietrailer/</a></li>
           </ul>
         </div>
+
+        <!-- experience -->
+        <div class="small-container experience">
+          <div class="title">
+            <h3>実&nbsp務&nbsp経&nbsp験</h3>
+            <p></p>
+          </div>
+          <p>２０１２年９月ー２０１８年１１月</p>
+          <h3>Vinpearl Nha Trang</h3>
+          <ul>
+            <li>受付係：お客様をお迎えし、チェックイン・チェックアウトの手続きを行います。 ゲストの滞在中に発生したトラブルに対処します。</li>
+            <li>ルームコントローラー：ゲストの予約リクエストに応じて部屋を割り当てます。 ホテルの客室状況の管理や関係部門との調整を行います。</li>
+          </ul>
+          <p>２０２０年４月−２０２３年３月</p>
+          <h3>アマゾン市川塩浜</h3>
+          <ul>
+            <li>ピッカー: 注文された商品を見つけて受け取り、梱包部門に渡します。</li>
+          </ul>
+        </div>
+
         <!-- certificates  -->
-        <div class="small-container certificates">
+        <!-- <div class="small-container certificates">
           <div class="title">
             <h3 class="japanese-type">証&nbsp明&nbsp書</h3>
             <p></p>
@@ -197,7 +246,7 @@
           <img src="./image/web.png" alt="certificate-web">
           <h3>JavaScriptでプログラミング技術の完成証明書。</h3>
           <img src="./image/javascript.png" alt="certificate-javascript">
-      </div>
+      </div> -->
     </div>
   </body>
 </html>
