--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
         <!-- avatar and name -->
         <div class="avatar">
-          <img src="./image/avatar.jpeg" alt="Nguyen Huu Thai" />
+          <img src="./image/cyan.png" alt="Nguyen Huu Thai" />
           <h1>Nguyen Huu Thai</h1>
-          <p>Front-end Developer</p>
+          <!-- <p>Front-end Developer</p> -->
         </div>
 
         <!-- personnal-info -->
@@ -36,8 +36,8 @@
               <p><i class="fa-solid fa-user-tie"></i>Male</p>
             </div>
             <div class="personnal-detail">
-              <a href="tel:+819026481991"
-                ><i class="fa fa-phone"></i>+81 90 2648 1991</a
+              <a href="tel:+84395202887"
+                ><i class="fa fa-phone"></i>0395 202 887</a
               >
             </div>
             <div class="personnal-detail">
@@ -45,11 +45,11 @@
                 ><i class="fa-solid fa-envelope"></i>huuthai.nt@gmail.com</a
               >
             </div>
-            <div class="personnal-detail">
+            <!-- <div class="personnal-detail">
               <a href="https://www.facebook.com/huuthainguyen20" target="_blank"
                 ><i class="fa-brands fa-facebook"></i>Nguyễn Hữu Thái</a
               >
-            </div>
+            </div> -->
             <div class="personnal-detail">
               <a href="https://thainh199x.github.io/mycv" target="_blank"
                 ><i class="fa-solid fa-window-restore"></i>https://thainh199x.github.io/mycv</a
@@ -57,8 +57,7 @@
             </div>
             <div class="personnal-detail">
               <a href="https://www.google.com/maps/@35.8245842,139.9059415,15z" target="_blank"
-                ><i class="fa-solid fa-location-dot"></i>Matsudo City, Chiba
-                Province, Japan</a
+                ><i class="fa-solid fa-location-dot"></i>Son Tra - Da Nang</a
               >
             </div>
           </div>
@@ -77,12 +76,13 @@
               possible.
             </li>
             <li>Know how to apply the knowledge learned in work.</li>
-            <li>Become a junior developer.</li>
+            <!-- <li>Become a junior developer.</li> -->
             <li>Get japanese certificates ( N2 ).</li>
           </ul>
           <h3>Long-term Goal( 3 years - 5 years ):</h3>
           <ul>
-            <li>Become a fullstack developer.</li>
+            <!-- <li>Become a fullstack developer.</li> -->
+            <li>Become a team leader</li>
             <li>Get japanese certificates ( N1 ).</li>
           </ul>
         </div>
@@ -93,7 +93,7 @@
             <h3>SKILLS</h3>
             <p></p>
           </div>
-          <div class="skill1">
+          <div class="skill4">
             <p>HTML</p>
             <span></span>
             <span></span>
@@ -101,7 +101,7 @@
             <span></span>
             <span></span>
           </div>
-          <div class="skill2">
+          <div class="skill4">
             <p>CSS</p>
             <span></span>
             <span></span>
@@ -117,7 +117,7 @@
             <span></span>
             <span></span>
           </div>
-          <div class="skill4">
+          <div class="skill3">
             <p>React JS</p>
             <span></span>
             <span></span>
@@ -125,7 +125,15 @@
             <span></span>
             <span></span>
           </div>
-          <div class="skill5">
+          <div class="skill4">
+            <p>Excel</p>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+          <div class="skill3">
             <p>English</p>
             <span></span>
             <span></span>
@@ -133,7 +141,7 @@
             <span></span>
             <span></span>
           </div>
-          <div class="skill6">
+          <div class="skill3">
             <p>Japanese</p>
             <span></span>
             <span></span>
@@ -141,7 +149,7 @@
             <span></span>
             <span></span>
           </div>
-          <div class="skill7">
+          <div class="skill4">
             <p>Communication</p>
             <span></span>
             <span></span>
@@ -149,7 +157,7 @@
             <span></span>
             <span></span>
           </div>
-          <div class="skill8">
+          <div class="skill4">
             <p>Teamwork</p>
             <span></span>
             <span></span>
@@ -157,7 +165,7 @@
             <span></span>
             <span></span>
           </div>
-          <div class="skill9">
+          <div class="skill4">
             <p>Task and time management</p>
             <span></span>
             <span></span>
@@ -175,6 +183,11 @@
             <h3>EDUCATION</h3>
             <p></p>
           </div>
+          <p>Sep 2009 - Jun 2012</p>
+          <h3>KHANH HOA University</h3>
+          <ul>
+            <li>Business Administration</li>
+          </ul>
           <p>Apr 2021 - Mar 2023</p>
           <h3>Japan International College of Technology</h3>
           <ol>
@@ -182,7 +195,7 @@
             <li>Programing with Java.</li>
             <li>Programing with VBA ( Visual Basic For Applications ).</li>
           </ol>
-          <p>Jun 2022 - Present</p>
+          <p>Jun 2022 - Dec 2022</p>
           <h3>FUNIX</h3>
           <ol>
             <li>Building your first website.</li>
@@ -241,10 +254,15 @@
             <li>Receptionist: Welcome guests and do check-in, check-out procedures. Handle problems arising during the guest's stay.</li>
             <li>Room-controller: Room assignment according to guest's booking request. Manage hotel room status and coordinate work with related departments.</li>
           </ul>
-          <p>Apr 2020 - Mar 2023</p>
-          <h3>Amazon Ichikawa Shiohama</h3>
+          <p>May 2023 - May 2024</p>
+          <h3>ACE Company</h3>
           <ul>
-            <li>Picker: Find and get the ordered product, then pass it on to the packaging department.</li>
+            <li>Receiving and appraising products and occasionally acted as an interpreter for those who did not know Japanese.</li>
+          </ul>
+          <p>May 2024 - Present</p>
+          <h3>RubberSoul Company</h3>
+          <ul>
+            <li>Consult with Japanese customers in Teams, translate customer instructions to operators, show them how to do things. Manage processes such as modules</li>
           </ul>
         </div>
 
