--- a/japanese.html
+++ b/japanese.html
@@ -17,9 +17,9 @@
 
         <!-- avatar and name -->
         <div class="avatar">
-          <img src="./image/avatar.jpeg" alt="Nguyen Huu Thai" />
-          <h1>グェン　フータイ</h1>
-          <p>フロントエンドの開発者</p>
+          <img src="./image/cyan.png" alt="Nguyen Huu Thai" />
+          <h1>グェン　フー　タイ</h1>
+          <!-- <p>フロントエンドの開発者</p> -->
         </div>
 
         <!-- personnal-info -->
@@ -36,8 +36,8 @@
               <p><i class="fa-solid fa-user-tie"></i>男</p>
             </div>
             <div class="personnal-detail">
-              <a href="tel:+819026481991"
-                ><i class="fa fa-phone"></i>+８１９０２６４８１９９１</a
+              <a href="tel:+84395202887"
+                ><i class="fa fa-phone"></i>０３９５２０２８８７</a
               >
             </div>
             <div class="personnal-detail">
@@ -45,11 +45,11 @@
                 ><i class="fa-solid fa-envelope"></i>huuthai.nt@gmail.com</a
               >
             </div>
-            <div class="personnal-detail">
+            <!-- <div class="personnal-detail">
               <a href="https://www.facebook.com/huuthainguyen20" target="_blank"
                 ><i class="fa-brands fa-facebook"></i>Nguyễn Hữu Thái</a
               >
-            </div>
+            </div> -->
             <div class="personnal-detail">
               <a href="https://thainh199x.github.io/mycv" target="_blank"
                 ><i class="fa-solid fa-window-restore"></i>https://thainh199x.github.io/mycv</a
@@ -57,7 +57,7 @@
             </div>
             <div class="personnal-detail">
               <a href="https://www.google.com/maps/@35.8245842,139.9059415,15z" target="_blank"
-                ><i class="fa-solid fa-location-dot"></i>千葉県松戸市新松戸南２丁目１４９番地の２</a
+                ><i class="fa-solid fa-location-dot"></i>Son Tra - Da nang</a
               >
             </div>
           </div>
@@ -73,12 +73,13 @@
           <ul>
             <li>環境に慣れ、できるだけ早く作業するように頑張る。</li>
             <li>学んだ知識を仕事に応用する方法を知っている。</li>
-            <li>ジュニア開発者になる。</li>
+            <!-- <li>ジュニア開発者になる。</li> -->
             <li>JLPT N2を合格する。</li>
           </ul>
           <h3>長期目標（３年～５年）：</h3>
           <ul>
-            <li>フルスタック開発者になる。</li>
+            <!-- <li>フルスタック開発者になる。</li> -->
+            <li>リーダーになる。</li>
             <li>JLPT N1を合格する。</li>
           </ul>
         </div>
@@ -89,7 +90,7 @@
             <h3 class="japanese-type">ス&nbspキ&nbspル</h3>
             <p></p>
           </div>
-          <div class="skill1">
+          <div class="skill4">
             <p>HTML</p>
             <span></span>
             <span></span>
@@ -97,7 +98,7 @@
             <span></span>
             <span></span>
           </div>
-          <div class="skill2">
+          <div class="skill4">
             <p>CSS</p>
             <span></span>
             <span></span>
@@ -113,7 +114,7 @@
             <span></span>
             <span></span>
           </div>
-          <div class="skill4">
+          <div class="skill3">
             <p>React JS</p>
             <span></span>
             <span></span>
@@ -121,7 +122,15 @@
             <span></span>
             <span></span>
           </div>
-          <div class="skill5">
+          <div class="skill4">
+            <p>Excel</p>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+          <div class="skill3">
             <p>英語</p>
             <span></span>
             <span></span>
@@ -129,7 +138,7 @@
             <span></span>
             <span></span>
           </div>
-          <div class="skill6">
+          <div class="skill3">
             <p>日本語</p>
             <span></span>
             <span></span>
@@ -137,7 +146,7 @@
             <span></span>
             <span></span>
           </div>
-          <div class="skill7">
+          <div class="skill4">
             <p>コミュニケーション</p>
             <span></span>
             <span></span>
@@ -145,7 +154,7 @@
             <span></span>
             <span></span>
           </div>
-          <div class="skill8">
+          <div class="skill4">
             <p>チームワーク</p>
             <span></span>
             <span></span>
@@ -153,7 +162,7 @@
             <span></span>
             <span></span>
           </div>
-          <div class="skill9">
+          <div class="skill4">
             <p>タスクと時間の管理</p>
             <span></span>
             <span></span>
@@ -171,6 +180,11 @@
             <h3 class="japanese-type">学&nbsp歴</h3>
             <p></p>
           </div>
+          <p>２００９年９月ー２０１２年６月</p>
+          <h3>KHANH HOA 大学</h3>
+          <ul>
+            <li>経営管理</li>
+          </ul>
           <p>２０２１年４月ー２０２３年３月</p>
           <h3>日本国際工科専門学校</h3>
           <ol>
@@ -178,7 +192,7 @@
             <li>Java。</li>
             <li>プログラミング（　VBA　）。</li>
           </ol>
-          <p>２０２２年６月ー現在</p>
+          <p>２０２２年６月ー２０２２年１２月</p>
           <h3>FUNIX</h3>
           <ol>
             <li>最初のウェブサイトを構築する。</li>
@@ -220,19 +234,24 @@
         <!-- experience -->
         <div class="small-container experience">
           <div class="title">
-            <h3>実&nbsp務&nbsp経&nbsp験</h3>
+            <h3 class="japanese-type">実&nbsp務&nbsp経&nbsp験</h3>
             <p></p>
           </div>
           <p>２０１２年９月ー２０１８年１１月</p>
           <h3>Vinpearl Nha Trang</h3>
           <ul>
-            <li>受付係：お客様をお迎えし、チェックイン・チェックアウトの手続きを行います。 ゲストの滞在中に発生したトラブルに対処します。</li>
-            <li>ルームコントローラー：ゲストの予約リクエストに応じて部屋を割り当てます。 ホテルの客室状況の管理や関係部門との調整を行います。</li>
+            <li>受付係：お客様をお迎えし、チェックイン・チェックアウトの手続きを行います。 ゲストの滞在中に発生したトラブルに対応。</li>
+            <li>ルームコントローラー：ゲストの予約リクエストに応じて部屋を割り当てます。 ホテルの客室状況の管理や関係部門との調整を作業。</li>
           </ul>
-          <p>２０２０年４月−２０２３年３月</p>
-          <h3>アマゾン市川塩浜</h3>
+          <p>２０２３年５月−２０２４年５月</p>
+          <h3>エース株式会社</h3>
           <ul>
-            <li>ピッカー: 注文された商品を見つけて受け取り、梱包部門に渡します。</li>
+            <li>受取など根付を作業、時々日本語を知らない方に通訳作業</li>
+          </ul>
+          <p>２０２４年６月−現在</p>
+          <h3>ラバーソウル株式会社</h3>
+          <ul>
+            <li>Teamsで日本人のお客様と相談し、オペレーターにお客様の指示を翻訳してやり方を教え、モジュールなどプロセスを管理</li>
           </ul>
         </div>
 
